--- a/slides/lecture3.qmd
+++ b/slides/lecture3.qmd
@@ -10,19 +10,20 @@ execute:
 ```{r setup, include=FALSE}
 source(here::here("R", "kernel.R"), keep.source = TRUE)
 source(here::here("R", "gauss.R"), keep.source = TRUE)
+
+phipsi <- read.table(here::here("data", "phipsi.tsv"), header = TRUE)
+phipsi[, c("phi", "psi")] <- pi * phipsi[, c("phi", "psi")] / 180
 ```
 
-## Today
+## Today's Agenda
 
-### Measuring Performance
-
-#### Profiling
+### Profiling
 
 Identifying bottlenecks in code
 
-#### Benchmarking
+### Benchmarking
 
-Comparing performance of different implementations
+Comparing performance of implementations
 
 . . .
 
@@ -35,9 +36,202 @@ Writing efficient code
 A profiler quantifies how much time each part of a function takes up. R uses a
 **sampling** profiler.
 
+# Benchmarking
+
+## R Is Slow ...
+
+... when used like a low-level language.
+
+- R is an **interpreted** (as opposed to _compiled_) language.
+- It was written mainly for specifying statistical models (not for developing
+  new numerical methods).
+- It is suitable for high-level programming where most low-level computations
+  are implemented in a compiled language (e.g. `lm()` and `qr()`.)
+- It is also quite old.
+
+## R Is Fast ...
+
+... when most computations are carried out by calls to compiled code.
+
+```{r}
+x <- rnorm(1e4)
+bench_res <- bench::mark(
+  loop = {
+    y <- numeric(length(x))
+    for (i in seq_along(x)) {
+      y[i] <- 10 * x[i]
+    }
+    y
+  },
+  vectorized = 10 * x
+)
+```
+
+## Plot Benchmark Results
+
+```{r bench-plot}
+#| fig-width: 5
+#| fig-cap: Benchmark results for a loop vs. a vectorized computation
+autoplot(bench_res)
+```
+
+## Vectorization
+
+Vectorization is the process of rewriting code to use vectorized operations,
+which operate on entire vectors at once, instead of using loops to operate on
+individual elements.
+
 . . .
 
-### profvis
+The term is somewhat misleading, since it does not necessarily involve vector
+processors.
+
+. . .
+
+### Example: Counting Zeros, Vectorized
+
+```{r}
+count_zeros_vec <- function(x) {
+  sum(x == 0)
+}
+```
+
+. . .
+
+- `x == 0` checks if each entry of `x` is 0 and returns a vector of logicals.
+- `sum()` computes and returns the sum of all elements in a vector. Logicals are
+  coerced to integers.
+- In this case the vectorized implementation is cohesive and clear.
+- The vectorized computations are performed by compiled code (C/C++/Fortran),
+  which run faster than pure R code.
+- Writing vectorized code requires a larger knowledge of R functions.
+
+## Beware of Loops in Disguise
+
+Just because you ran a function, it does not mean that it is vectorized.
+
+. . .
+
+```{r}
+#| fig-width: 5
+#| fig-height: 2
+bench::mark(
+  sapply(x, function(x_i) 10 * x_i),
+  10 * x
+) |>
+  plot()
+```
+
+## Development Cycle Sketch
+
+- Is there a good-enough existing implemention for your problem? If yes, then
+  you are done.
+- If not, implement a solution and test it. Does it solve your problem
+  sufficiently well? If yes, then you're done.
+- If not, then profile (next week!), benchmark, and debug (week 5). Then
+  refactor and optimize.
+
+. . .
+
+### The Root of All Evil
+
+\medskip
+
+> We _should_ forget about small efficiencies, say about 97% of the time:
+> premature optimization is the root of all evil. Yet we should not pass up our
+> opportunities in that critical 3%.
+>
+> \medskip
+> _—Donald Knuth_
+
+## Example: Density Estimation
+
+```{r kernDens}
+kern_dens <- function(x, h, m = 512) {
+  rg <- range(x)
+  xx <- seq(rg[1] - 3 * h, rg[2] + 3 * h, length.out = m)
+  y <- numeric(m)
+
+  for (i in seq_along(xx)) {
+    for (j in seq_along(x)) {
+      y[i] <- y[i] + exp(-(xx[i] - x[j])^2 / (2 * h^2))
+    }
+  }
+
+  y <- y / (sqrt(2 * pi) * h * length(x))
+
+  list(x = xx, y = y)
+}
+```
+
+## Vectorizing Our Density Estimator
+
+```{r kernDens-vec}
+kern_dens_vec <- function(x, h, m = 512) {
+  rg <- range(x)
+  xx <- seq(rg[1] - 3 * h, rg[2] + 3 * h, length.out = m)
+  y <- numeric(m)
+  const <- (sqrt(2 * pi) * h * length(x))
+
+  for (i in seq_along(xx)) {
+    y[i] <- sum(exp(-(xx[i] - x)^2 / (2 * h^2))) / const
+  }
+
+  list(x = xx, y = y)
+}
+```
+
+## Benchmarking
+
+```{r kern-bench}
+kern_bench <- bench::mark(
+  kern_dens(phipsi$psi, 0.2),
+  kern_dens_vec(phipsi$psi, 0.2)
+)
+```
+
+## Plot Benchmark Results
+
+```{r kern-bench-autoplot}
+#| message: false
+#| fig-height: 2.5
+#| fig-width: 5
+plot(kern_bench)
+```
+
+## Parameterized Benchmarking
+
+```{r kern-bench-grid}
+#| message: false
+kern_benchmarks <- bench::press(
+  n = 2^(6:9),
+  m = 2^(5:11),
+  {
+    bench::mark(
+      loop = kern_dens(x[1:n], h = 0.2, m = m),
+      vec = kern_dens_vec(x[1:n], h = 0.2, m = m)
+    )
+  }
+)
+```
+
+## Plotting Results
+
+```{r kern-bench-fig}
+#| message: false
+#| warning: false
+#| fig-width: 7
+library(tidyverse)
+mutate(kern_benchmarks, expression = as.character(expression)) |>
+  ggplot(aes(m, median, color = expression)) +
+  geom_point() +
+  geom_line() +
+  facet_grid(cols = vars(n))
+```
+
+. . .
+
+## profvis
 
 The R package [profvis](https://CRAN.R-project.org/package=profvis) provides
 useful visualization tools. Can also be called activated through the RStudio
@@ -49,7 +243,7 @@ library(profvis)
 
 . . .
 
-### Remember!
+## Remember!
 
 > We _should_ forget about small efficiencies, say about 97% of the time:
 > premature optimization is the root of all evil. Yet we should not pass up our
@@ -190,8 +384,7 @@ sqrt_bench
 default plot behavior.
 
 ```{r bee-bench, fig.asp = 0.5, fig.width = 9, message = FALSE}
-library(ggbeeswarm)
-
+# pak::pak("ggbeeswarm")
 plot(sqrt_bench)
 ```
 
@@ -227,7 +420,9 @@ initial arguments
 
 ### Benchmarking Density Estimation
 
-```{r dens-bench, message = FALSE, cache = TRUE, warning = FALSE}
+```{r dens-bench}
+#| message: false
+#| warning: false
 dens_bench <- bench::press(
   n = 2^(5:13),
   {
@@ -252,7 +447,8 @@ head(dens_bench, 6)
 
 ## Default Plotting Benchpress Results
 
-```{r default-press-plot, fig.width = 12, fig.asp = 0.5}
+```{r default-press-plot}
+#| fig-width: 5.5
 plot(dens_bench)
 ```
 
@@ -343,9 +539,13 @@ we cannot optimize the kernel further.
 . . .
 
 Instead, we use binning: create $B$ bins and evaluate the kernel and replace
-$$\hat{f}(x) = \frac{1}{n h} \sum_{i=1}^n K\left( \frac{x - x_i}{h} \right)$$
+$$
+  \hat{f}(x) = \frac{1}{n h} \sum_{i=1}^n K\left( \frac{x - x_i}{h} \right)
+$$
 with
-$$\hat{f}(x) = \frac{1}{n h} \sum_{j=1}^B n_j K\left( \frac{x - c_j}{h} \right)$$
+$$
+  \hat{f}(x) = \frac{1}{n h} \sum_{j=1}^B n_j K\left( \frac{x - c_j}{h} \right)
+$$
 where $c_j$ is the center of the $j$th bin and $n_j$ is the number of data
 points in the $j$th bin.
 
